changes made at finish of css section

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ol>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/toast.html">Toast</a></li>
-        <li><a href="recipes/boiledegg.html">Hard Boiled Egg</a></li>
-    </ol>
+    <h1 class="banner">The Recipes</h1>
+    <div class="grid-container">
+    <div class="recipes">
+        <p><a href="./recipes/lasagna.html"><img src="./images/lasagna.jpg" alt="Lasagna"></a></p>
+    </div>
+
+    <div class="recipes">
+        <p><a href="./recipes/boiledegg.html"><img src="./images/eggs.jpg" alt="Boiled Eggs"></a></p>
+    </div>
+
+    <div class="recipes">
+        <p><a href="./recipes/toast.html"><img src="./images/toast.jpeg" alt="Lasagna"></a></p>
+    </div>
+</div>
+
+
+
+    
     
 </body>
 </html>
