end of css foundation homework

--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hard Boiled Egg</title>
+    <link rel="stylesheet" href="recepie.css">
 </head>
 <body>
+    <h1 class="banner">The Recipes</h1>
+    <div class="recepie_container">
     <h1>Hard Boiled Egg</h1>
-    <img src="../recipes/eggs.jpg" alt="Hard Boiled eggs no runny BS" height="210" width="310">
+    <img src="../images/eggs.jpg" alt="Hard Boiled eggs no runny BS" height="210" width="310">
     <h2>Description</h2>
     <p>This is the how you boil an egg if you are not a god hating savage.</p>
     <h3>Ingredients</h3>
@@ -28,5 +31,6 @@
         <li>Sprinkle generous amount of black paper</li>
     </ol>
 
+</div>
 </body>
 </html>
