end of css foundation homework

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="recepie.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="../recipes/lasagna.jpg" alt="Tasty Lasagna" height="210" width="310">
+    <h1 class="banner">The Recipes</h1>
+    <div class="recepie_container">
+        <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpg" alt="Tasty Lasagna" height="210" width="310">
     <h2>Description</h2>
     <p>This is the best ever you life will be changed. Yes, yes, This is the best ever you life will be changed.</p>
     <h3>Ingredients</h3>
@@ -27,5 +30,6 @@
         <li>Eat cheese while your Lasgna arrives</li>
     </ol>
 
+    </div>
 </body>
 </html>
