end of css foundation homework

--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toast</title>
+    <link rel="stylesheet" href="recepie.css">
 </head>
 <body>
+    <h1 class="banner">The Recipes</h1>
+    <div class="recepie_container">
     <h1>Toast</h1>
-    <img src="../recipes/toast.jpeg" alt="Toasted Toast" height="210" width="310">
+    <img src="../images/toast.jpeg" alt="Toasted Toast" height="210" width="310">
     <h2>Description</h2>
     <p>This is the best toast ever ,you life will be changed. Yes, yes, This is the best ever you life will be changed.</p>
     <h3>Ingredients</h3>
@@ -23,6 +26,6 @@
         <li>Put breads in the toaster</li>
         <li>Take the toast out after toaster goes "BEEP BEEP"</li>
     </ol>
-
+</div>
 </body>
 </html>
