Add inline style to footer

--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 <body>
     <h1 class="banner">The Recipes</h1>
     <div class="grid-container">
-        <div class="recipes">
-            <p><a href="./recipes/lasagna.html"><img src="./images/lasagna.jpg" alt="Lasagna"></a></p>
+        <div class="recipes lasagna">
+            <div ><a href="./recipes/lasagna.html" target="_blank" >See Recipe</a></div>
         </div>
 
-        <div class="recipes">
-            <p><a href="./recipes/boiledegg.html"><img src="./images/eggs.jpg" alt="Boiled Eggs"></a></p>
+        <div class="recipes egg">
+          <div> <a href="./recipes/boiledegg.html" target="_blank">See Recipe</a></div> 
         </div>
 
-        <div class="recipes">
-            <p><a href="./recipes/toast.html"><img src="./images/toast.jpeg" alt="Lasagna"></a></p>
+        <div class="recipes toast">
+        <div><a href="./recipes/toast.html" target="_blank">See Recipe</a></div>
         </div>
 </div>
 
-
+<div class="footer">
+    <p>Author:Istiak<br>
+    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a></p>
+</div>
 
     
     
