Add  margin-top to footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 </div>
 
 <div class="footer">
-    <p>Author:Istiak<br>
-    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a></p>
+    <p>Author:Istiak in conjunction with The Odin Project<br>
+    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a>
+    </p>
 </div>
 
     
