--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,28 +8,44 @@
 </head>
 <body>
     <h1 class="banner">The Recipes</h1>
-    <div class="recepie_container">
-        <h1>Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="Tasty Lasagna" height="210" width="310">
-    <h2>Description</h2>
-    <p>This is the best ever you life will be changed. Yes, yes, This is the best ever you life will be changed.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Chesse</li>
-        <li>Love</li>
-        <li>Chesse</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Get Chesse</li>
-        <li>Eat some Chesse</li>
-        <li>Feel grateful for the existence of Chesse</li>
-        <li>Call somebody you love</li>
-        <li>Tell them you love them</li>
-        <li>Order Lasgna from a good restaurant</li>
-        <li>Eat cheese while your Lasgna arrives</li>
-    </ol>
+     <div class="body">
+    <div class="side">
+        <h4>Ingredients</h4>
+        <ul>
+            <li>👉🏽Cheese</li>
+            <li>👉🏽Love</li>
+            <li>👉🏽Cheese</li>
+        </ul>
+    </div>
+
+    <div class="recipe_container">
+    <div class="bottom">
+        
+        <p>
+            <h1>Lasagna</h1>
+            This is the best ever you life will be changed.<br />
+            Yes, yes, This is the best ever you life will be changed.<br />
+            <h4>Steps</h4>
+            👉🏽Get Cheese<br />
+            👉🏽Eat some Cheese<br />
+            👉🏽Feel grateful for the existence of Cheese<br />
+            👉🏽Call somebody you love<br />
+            👉🏽Tell them you love them<br />
+            👉🏽Order Lasagna from a good restaurant<br />
+            👉🏽Eat cheese while your Lasagna arrives<br />
+   
+        </p>
+    </div>
+    <div class="bottom-pic">
+        <img src="../images/lasagna.jpg" alt="lasagna">
 
     </div>
+    </div>
+ </div>
+ <div class="footer">
+    <p>Author:Istiak in conjunction with The Odin Project<br>
+    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a>
+    </p>
+</div>
 </body>
 </html>
