--- a/recipes/boiledegg.html
+++ b/recipes/boiledegg.html
@@ -3,34 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hard Boiled Egg</title>
+    <title>BoiledEggs</title>
     <link rel="stylesheet" href="recepie.css">
 </head>
 <body>
     <h1 class="banner">The Recipes</h1>
-    <div class="recepie_container">
-    <h1>Hard Boiled Egg</h1>
-    <img src="../images/eggs.jpg" alt="Hard Boiled eggs no runny BS" height="210" width="310">
-    <h2>Description</h2>
-    <p>This is the how you boil an egg if you are not a god hating savage.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Egg</li>
-        <li>Water</li>
-        <li>Black Paper</li>
-        <li>Cheese</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Get Chesse</li>
-        <li>Eat some Chesse</li>
-        <li>Place eggs in a large saucepan. Cover them with cool water by 1 inch.</li>
-        <li>Cover the pan with a lid and bring water to a rolling boil over high heat; when the water has reached a boil, reduce heat to medium-high and set the timer for the desired time. Boil for 8 minutes over medium-high heat for perfect hard boiled eggs. </li>
-        <li>Using a slotted spoon, transfer them to a large bowl of ice water and let them cool for a few minutes. Or you can place them under cool running water to stop the cooking. This will also help the eggs peel easily. </li>
-        <li>Remove the eggs from the cold water and peel immediately.</li>
-        <li>Sprinkle generous amount of black paper</li>
-    </ol>
+     <div class="body">
+    <div class="side">
+        <h4>Ingredients</h4>
+        <ul>
+            <li>👉🏽Egg</li>
+            <li>👉🏽Water</li>
+            <li>👉🏽Black Pepper</li>
+            <li>👉🏽Cheese</li>
+        </ul>
+    </div>
 
+    <div class="recipe_container">
+    <div class="bottom">
+        
+        <p>
+            <h1>Hard Boiled Egg</h1>
+            This is the how you boil an egg if you are not a god hating savage.<br />
+            Yes, yes, This is the best ever you life will be changed.<br />
+            <h4>Steps</h4>
+            👉🏽Get Cheese<br />
+            👉🏽Eat some Cheese<br />
+            👉🏽Place eggs in a large saucepan. <br />
+            👉🏽Cover them with cool water by 1 inch<br />
+            👉🏽Wait till water has reached a boilr<br />
+            👉🏽Reduce heat to medium-high and set the time<br />
+            👉🏽Boil for 8 minutes over medium-high heat for perfect hard<br />
+            
+   
+        </p>
+    </div>
+    <div class="bottom-pic">
+        <img src="../images/eggs.jpg" alt="egg">
+
+    </div>
+    </div>
+ </div>
+ <div class="footer">
+    <p>Author:Istiak in conjunction with The Odin Project<br>
+    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a>
+    </p>
 </div>
 </body>
 </html>
