--- a/recipes/toast.html
+++ b/recipes/toast.html
@@ -3,29 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toast</title>
+    <title>Toast!</title>
     <link rel="stylesheet" href="recepie.css">
 </head>
 <body>
     <h1 class="banner">The Recipes</h1>
-    <div class="recepie_container">
-    <h1>Toast</h1>
-    <img src="../images/toast.jpeg" alt="Toasted Toast" height="210" width="310">
-    <h2>Description</h2>
-    <p>This is the best toast ever ,you life will be changed. Yes, yes, This is the best ever you life will be changed.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Regular Bread</li>
-        <li>Brown Bread</li>
-        <li>Chesse</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Get Chesse</li>
-        <li>Eat some Chesse</li>
-        <li>Put breads in the toaster</li>
-        <li>Take the toast out after toaster goes "BEEP BEEP"</li>
-    </ol>
+     <div class="body">
+    <div class="side">
+        <h4>Ingredients</h4>
+        <ul>
+            <li>👉🏽Regular Bread</li>
+            <li>👉🏽Brown Bread</li>
+            <li>👉🏽Cheese</li>
+        </ul>
+    </div>
+
+    <div class="recipe_container">
+    <div class="bottom">
+        
+        <p>
+            <h1>Toast</h1>
+            This is the best toast ever ,you life will be changed.<br />
+            Yes, yes, This is the best ever you life will be changed.<br />
+            <h4>Steps</h4>
+            👉🏽Get Cheese<br />
+            👉🏽Eat some Cheese<br />
+            👉🏽Put breads in the toaster<br />
+            👉🏽Take the toast out after toaster goes "BEEP BEEP"<br />
+
+   
+        </p>
+    </div>
+    <div class="bottom-pic">
+        <img src="../images/toast.jpeg" alt="toast">
+
+    </div>
+    </div>
+ </div>
+ <div class="footer">
+    <p>Author:Istiak in conjunction with The Odin Project<br>
+    <a href="mailto:istiaksmail@gmail.com"; style="background-color: rgba(255, 228, 196, 0.614); color:blue;">Contact Me</a>
+    </p>
 </div>
 </body>
 </html>
